<resources>
    <string name="app_name">Program</string>
    <string name="sign_in">Sign in</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="log_in">LOG IN</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="or_sign_in_with">or sign in with</string>
    <string name="todo">TODO</string>
    <string name="instagram">Instagram</string>
</resources>