<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/signin"
        android:text="@string/instagram"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TextViewSignIn" />

    <EditText
        android:id="@+id/username"
        android:hint="@string/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signin"
        style="@style/StyleEditText"/>

    <EditText
        android:id="@+id/password"
        android:hint="@string/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/username"
        style="@style/StyleEditText"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/loginbtn"
        android:text="@string/log_in"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        style="@style/StyleButton"
        />
    <TextView
        android:id="@+id/forgotpass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginbtn"
        android:text="@string/forgot_password"
        style="@style/StyleTextView"


        />
    <TextView
        android:id="@+id/others"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/socialicon"
        android:text="@string/or_sign_in_with"
        style="@style/StyleTextView"
        />


    <LinearLayout
        android:id="@+id/socialicon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:gravity="center"
        android:layout_alignParentBottom="true">
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="20dp"
            android:src="@drawable/google_icon"
            android:contentDescription="@string/todo"
            tools:ignore="ContentDescription" />
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="20dp"
            android:src="@drawable/facebook_icon"
            android:contentDescription="@string/todo" />
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="20dp"
            android:src="@drawable/linkedin_icon"
            android:contentDescription="@string/todo" />
    </LinearLayout>
</RelativeLayout>